Исправил код возврата при переполнении кеша
